--- a/package.json
+++ b/package.json
@@ -8,9 +8,18 @@
     "homebridge",
     "homekit"
   ],
+  "repository": {
+		"type": "git",
+		"url": "git+https://github.com/bodav/homebridge-doorbell.git"
+	},
   "author": "bodav",
   "license": "ISC",
   "dependencies": {
     "rpi-gpio": "^0.9.1"
-  }
+  },
+  "homepage": "https://github.com/bodav/homebridge-doorbell",
+	"engines" : {
+	    "node": ">=0.12.0",
+	    "homebridge": ">=0.2.0"
+	}
 }
